@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-08T12:27:50Z",
-  "count_outdated" : 4840,
-  "uniques_outdated" : 2548,
-  "count" : 4884,
+  "timestamp" : "2025-05-09T01:08:16Z",
+  "count_outdated" : 4841,
+  "uniques_outdated" : 2549,
+  "count" : 4885,
   "uniques" : 2583,
   "clones" : [
-    {
-      "timestamp": "2025-04-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-26T00:00:00Z",
       "count": 7,
@@ -124,9 +115,9 @@
     },
     {
       "timestamp": "2025-05-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
