@@ -3,11 +3,6 @@
   "uniques": 19,
   "clones": [
     {
-      "timestamp": "2025-04-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-04-26T00:00:00Z",
       "count": 7,
       "uniques": 5
@@ -69,7 +64,7 @@
     },
     {
       "timestamp": "2025-05-08T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
